--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,17 +1,6 @@
 
 {
-  "Administrator Dashboard": "Administrator Dashboard",
-  "Manage your restaurant's operations.": "Manage your restaurant's operations.",
-  "Modules": "Modules",
-  "Orders": "Orders",
-  "Menu & Recipes": "Menu & Recipes",
-  "Staff": "Staff",
-  "Inventory": "Inventory",
-  "Kitchen": "Kitchen",
-  "Reports": "Reports",
-  "Digital Map": "Digital Map",
-  "Menu Clientes": "Customer Menu",
-  "Settings": "Settings",
+  "Hello": "Hello",
   "Welcome back, {{name}}!": "Welcome back, {{name}}!",
   "Login Successful": "Login Successful",
   "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
@@ -33,51 +22,68 @@
   "Remember me": "Remember me",
   "Forgot your password?": "Forgot your password?",
   "LOG IN": "LOG IN",
-  "Restaurant Management": "Restaurant Management",
-  "Manage roles, permissions, and PINs for your staff.": "Manage roles, permissions, and PINs for your staff.",
-  "Add Employee": "Add Employee",
-  "Could not load employees.": "Could not load employees.",
-  "Restaurant information is not available yet. Please try again.": "Restaurant information is not available yet. Please try again.",
-  "Edit Employee": "Edit Employee",
-  "Add New Employee": "Add New Employee",
-  "Modify the employee information.": "Modify the employee information.",
-  "Add a new employee to your team.": "Add a new employee to your team.",
-  "Module Permissions": "Module Permissions",
-  "Select the modules this employee can access.": "Select the modules this employee can access.",
-  "Open menu": "Open menu",
+  "The first step to elevate your restaurant": "The first step to elevate your restaurant",
+  "Already have an account? Log in": "Already have an account? Log in",
+  "Register Your Restaurant": "Register Your Restaurant",
+  "Take the first step to elevate your restaurant.": "Take the first step to elevate your restaurant.",
+  "Restaurant Information": "Restaurant Information",
+  "Restaurant Name": "Restaurant Name",
+  "e.g., Tacos El Sol": "e.g., Tacos El Sol",
+  "Social Reason": "Social Reason",
+  "e.g., Tacos El Sol S.A. de C.V.": "e.g., Tacos El Sol S.A. de C.V.",
+  "Style": "Style",
+  "Select a style": "Select a style",
+  "Italiano": "Italian",
+  "Mar y tierra": "Surf and Turf",
+  "Carnes": "Meats",
+  "Mariscos": "Seafood",
+  "Mexicano": "Mexican",
+  "Japonés": "Japanese",
+  "Otro": "Other",
+  "Address": "Address",
+  "e.g., Main St 123, Downtown": "e.g., Main St 123, Downtown",
+  "Municipality or City": "Municipality or City",
+  "e.g., Cuauhtémoc": "e.g., Cuauhtémoc",
+  "State": "State",
+  "Select a state": "Select a state",
+  "Contact Information (Administrator)": "Contact Information (Administrator)",
+  "Phone": "Phone",
+  "Phone (will be the password)": "Phone (will be the password)",
+  "Minimum 6 digits": "Minimum 6 digits",
+  "Email": "Email",
+  "Email (will be the username)": "Email (will be the username)",
+  "e.g., admin@tacoselsol.com": "e.g., admin@tacoselsol.com",
+  "RFC": "RFC",
+  "e.g., SOLT850101XXX": "e.g., SOLT850101XXX",
+  "Saving...": "Saving...",
+  "Registering...": "Registering...",
+  "Save Changes": "Save Changes",
+  "Register Restaurant": "Register Restaurant",
+  "Update Successful": "Update Successful",
+  "The information for restaurant '{{name}}' has been updated.": "The information for restaurant '{{name}}' has been updated.",
+  "Registration Successful": "Registration Successful",
+  "The restaurant '{{name}}' and its administrator user have been registered.": "The restaurant '{{name}}' and its administrator user have been registered.",
+  "Operation Error": "Operation Error",
+  "An error occurred during the operation.": "An error occurred during the operation.",
+  "The email is already in use by another administrator.": "The email is already in use by another administrator.",
+  "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
+  "The email format is invalid.": "The email format is invalid.",
+  "Master Admin Dashboard": "Master Admin Dashboard",
+  "Welcome to the Tlacualli main control panel.": "Welcome to the Tlacualli main control panel.",
+  "Registered Restaurants": "Registered Restaurants",
+  "Master Admin Users": "Master Admin Users",
+  "Administrator Users": "Administrator Users",
+  "Collaborator Users": "Collaborator Users",
+  "Monthly Accesses": "Monthly Accesses",
+  "Accesses": "Accesses",
+  "No access data to display.": "No access data to display.",
+  "Actions by Restaurant": "Actions by Restaurant",
   "Actions": "Actions",
-  "Edit": "Edit",
-  "Permissions": "Permissions",
-  "Deactivate": "Deactivate",
-  "Activate": "Activate",
-  "Delete Permanently": "Delete Permanently",
-  "Are you sure?": "Are you sure?",
-  "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?",
-  "Cancel": "Cancel",
-  "Yes, deactivate": "Yes, deactivate",
-  "Permanent Deletion": "Permanent Deletion",
-  "This action is irreversible. The user will be deleted from the authentication system and database. Are you absolutely sure?": "This action is irreversible. The user will be deleted from the authentication system and database. Are you absolutely sure?",
-  "Yes, delete permanently": "Yes, delete permanently",
-  "Employee Deactivated": "Employee Deactivated",
-  "The employee has been marked as inactive.": "The employee has been marked as inactive.",
-  "Could not deactivate the employee.": "Could not deactivate the employee.",
-  "Employee Activated": "Employee Activated",
-  "The employee has been marked as active.": "The employee has been marked as active.",
-  "Could not activate the employee.": "Could not activate the employee.",
-  "Employee Deleted": "Employee Deleted",
-  "The employee has been permanently removed from the database.": "The employee has been permanently removed from the database.",
-  "Could not permanently delete the employee. Please contact support if the problem persists.": "Could not permanently delete the employee. Please contact support if the problem persists.",
-  "Active": "Active",
-  "Inactive": "Inactive",
-  "No employees found. Add your first employee to get started.": "No employees found. Add your first employee to get started.",
-  "Administrator": "Administrator",
-  "Employee": "Employee",
   "Unknown": "Unknown",
-  "Loading...": "Loading...",
-  "Table and Assignment Management": "Table and Assignment Management",
-  "Visualize your restaurant layout, manage tables, and track assignments in real-time.": "Visualize your restaurant layout, manage tables, and track assignments in real-time.",
-  "Assign Areas & Tables": "Assign Areas & Tables",
-  "Assign employees to specific areas and tables.": "Assign employees to specific areas and tables.",
+  "ID": "ID",
+  "No action data to display.": "No action data to display.",
+  "Restaurants": "Restaurants",
+  "Master Users": "Master Users",
   "My Account": "My Account",
   "Theme": "Theme",
   "Light": "Light",
@@ -88,82 +94,69 @@
   "Log out": "Log out",
   "Toggle navigation menu": "Toggle navigation menu",
   "Menu": "Menu",
-  "Success": "Success",
-  "Password updated successfully.": "Password updated successfully.",
   "Passwords do not match.": "Passwords do not match.",
   "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
+  "Success": "Success",
+  "Password updated successfully.": "Password updated successfully.",
   "Error updating password": "Error updating password",
   "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
   "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
   "New Password": "New Password",
   "Confirm Password": "Confirm Password",
-  "Save Changes": "Save Changes",
+  "Cancel": "Cancel",
+  "Go Back": "Go Back",
+  "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
+  "Client Dashboard": "Client Dashboard",
+  "Your personal space.": "Your personal space.",
+  "Welcome!": "Welcome!",
+  "View your order history, manage your payment methods, and update your profile.": "View your order history, manage your payment methods, and update your profile.",
+  "View My Orders": "View My Orders",
+  "Settings": "Settings",
   "Dashboard": "Dashboard",
-  "First Name(s)": "First Name(s)",
-  "e.g., Ana": "e.g., Ana",
-  "Last Names": "Last Names",
-  "e.g., Silva": "e.g., Silva",
-  "Phone (will be the password)": "Phone (will be the password)",
-  "Minimum 6 digits": "Minimum 6 digits",
-  "Email": "Email",
-  "e.g., user@email.com": "e.g., user@email.com",
-  "Profile": "Profile",
-  "Select a profile": "Select a profile",
-  "Register Employee": "Register Employee",
-  "User Updated": "User Updated",
-  "The employee '{{fullName}}' has been updated.": "The employee '{{fullName}}' has been updated.",
-  "Employee Registered": "Employee Registered",
-  "The employee '{{fullName}}' has been successfully registered.": "The employee '{{fullName}}' has been successfully registered.",
-  "An error occurred while {{action}} the employee.": "An error occurred while {{action}} the employee.",
-  "updating": "updating",
-  "registering": "registering",
-  "This email is already in use by another user.": "This email is already in use by another user.",
-  "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
-  "The email format is invalid.": "The email format is invalid.",
-  "Save Permissions": "Save Permissions",
-  "Permissions Updated": "Permissions Updated",
-  "The employee's module access has been updated.": "The employee's module access has been updated.",
-  "Update Error": "Update Error",
-  "Could not save the permissions.": "Could not save the permissions.",
-  "Square Table": "Square Table",
-  "Circle Table": "Circle Table",
-  "Delete Room": "Delete Room",
-  "Add Room": "Add Room",
-  "Add New Room": "Add New Room",
-  "Create a new area or room to organize your tables.": "Create a new area or room to organize your tables.",
-  "Room name (e.g., Terrace)": "Room name (e.g., Terrace)",
-  "Save": "Save",
-  "Table Name": "Table Name",
-  "Number of Seats": "Number of Seats",
-  "This action cannot be undone. This will permanently delete the table from the room plan.": "This action cannot be undone. This will permanently delete the table from the room plan.",
-  "Delete": "Delete",
-  "Select an employee": "Select an employee",
-  "Tables": "Tables",
-  "Assign all": "Assign all",
-  "Remove all": "Remove all",
-  "No tables in this area.": "No tables in this area.",
-  "Assignment Updated": "Assignment Updated",
-  "The assignment has been saved successfully.": "The assignment has been saved successfully.",
-  "Could not save the assignment.": "Could not save the assignment.",
-  "Table": "Table",
-  "Modify the name and number of seats for the table.": "Modify the name and number of seats for the table.",
-  "Table deleted": "Table deleted",
-  "The table has been removed from the map.": "The table has been removed from the map.",
-  "Table updated": "Table updated",
-  "Create a room to start adding tables.": "Create a room to start adding tables.",
-  "No tables have been configured. Please go to the Digital Map in the admin dashboard.": "No tables have been configured. Please go to the Digital Map in the admin dashboard.",
-  "Select a room": "Select a room",
-  "You must select a room to add a table.": "You must select a room to add a table.",
-  "Room added": "Room added",
-  "The room \"{{name}}\" has been created.": "The room \"{{name}}\" has been created.",
-  "Action not allowed": "Action not allowed",
-  "You cannot delete the only existing room.": "You cannot delete the only existing room.",
-  "Room deleted": "Room deleted",
-  "The room \"{{name}}\" has been deleted.": "The room \"{{name}}\" has been deleted.",
+  "Orders": "Orders",
+  "Menu & Recipes": "Menu & Recipes",
+  "Staff": "Staff",
+  "Inventory": "Inventory",
+  "Kitchen": "Kitchen",
+  "Reports": "Reports",
+  "Digital Map": "Digital Map",
+  "Menu Clientes": "Customer Menu",
   "Collaborator Dashboard": "Collaborator Dashboard",
   "Access your daily tasks and information.": "Access your daily tasks and information.",
   "Available Modules": "Available Modules",
   "No modules have been assigned to you. Please contact your administrator.": "No modules have been assigned to you. Please contact your administrator.",
+  "Administrator Dashboard": "Administrator Dashboard",
+  "Manage your restaurant's operations.": "Manage your restaurant's operations.",
+  "Modules": "Modules",
+  "Basic Information": "Basic Information",
+  "Update your restaurant's information.": "Update your restaurant's information.",
+  "Logo & Icon": "Logo & Icon",
+  "Upload your brand images.": "Upload your brand images.",
+  "Taxes": "Taxes",
+  "Configure tax rates.": "Configure tax rates.",
+  "Restaurant Settings": "Restaurant Settings",
+  "Manage your restaurant's general information.": "Manage your restaurant's general information.",
+  "Loading...": "Loading...",
+  "Logo File (max 1MB)": "Logo File (max 1MB)",
+  "Icon File (max 1MB)": "Icon File (max 1MB)",
+  "Upload Images": "Upload Images",
+  "IVA Rate (%)": "IVA Rate (%)",
+  "Save IVA Rate": "Save IVA Rate",
+  "Restaurant data could not be loaded.": "Restaurant data could not be loaded.",
+  "IVA Updated": "IVA Updated",
+  "The new IVA rate has been saved successfully.": "The new IVA rate has been saved successfully.",
+  "Could not save the IVA rate.": "Could not save the IVA rate.",
+  "No file selected": "No file selected",
+  "Please select a file to upload.": "Please select a file to upload.",
+  "Upload successful": "Upload successful",
+  "Your images have been updated.": "Your images have been updated.",
+  "Upload failed": "Upload failed",
+  "An error occurred while uploading your images.": "An error occurred while uploading your images.",
+  "Invalid File Type": "Invalid File Type",
+  "Please select an image file.": "Please select an image file.",
+  "File too large": "File too large",
+  "Please select an image smaller than 1MB.": "Please select an image smaller than 1MB.",
+  "Selected": "Selected",
   "Menu Options": "Menu Options",
   "Choose an action for the customer menu.": "Choose an action for the customer menu.",
   "Go to Menu": "Go to Menu",
